# libsynctory

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README
CMake/: CheckStructExists.cmake  tests.c
doc/: CMakeLists.txt
doc/specification/: spec.xml
src/: CMakeLists.txt
src/config/: CMakeLists.txt  config.h.in  default.h  version.h
src/include/: CMakeLists.txt  config.h.in  synctory.h
src/include/libsynctory/: CMakeLists.txt  diff.h  fingerprint.h  synth.h  version.h
src/lib/: CMakeLists.txt  _checksum.h  _diff.h  _endianess.h  _fheader.h  _file64.h  _fingerprint.h  _synth.h  _tree.h  checksum.c  diff.c  endianess.c  fheader.c  file64.c  fingerprint.c  synctory.c  synth.c  tree.c
src/test/: CMakeLists.txt  helpers.c  helpers.h  main.c  test.h  test_diff.c  test_fingerprint.c  test_performance.c  test_synth.c  test_version.c  tests.c  tests.h
src/test/checksum/: CMakeLists.txt  test_checksum.c
src/test/diff/: CMakeLists.txt  test_diff.c
src/test/fingerprint/: CMakeLists.txt  generate_testfile.c  test_fingerprint.c
src/test/synth/: CMakeLists.txt  test_synth.c
